kubeflow/templates/authorization.allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: #namespace 이름
spec:
  rules:
  - {}
